[project]
name = "med-cheatsheet-qdrant"
version = "0.1.0"
description = "医療チートシートのためのQdrantを用いたRAGシステム"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "qdrant-client>=1.13.2",
    "sentence-transformers>=2.2.2",
    "transformers>=4.33.1",
    "torch>=2.5.1",
    "numpy>=1.24.0",
    "sentencepiece>=0.2.0",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
